[gd_scene load_steps=9 format=2]

[ext_resource path="res://Src/Actor/Mage.gd" type="Script" id=1]
[ext_resource path="res://Assets/mage.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.0409, 31.4404 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true

[sub_resource type="Animation" id=4]
resource_name = "Shoot0"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 5, 9, 13, 9, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot1"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 8, 12, 8, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shoot2"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 6, 10, 14, 10, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shoot3"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 11, 15, 11, 7 ]
}

[node name="Mage" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="Node2d" type="Node2D" parent="."]

[node name="SpawnPoint" type="Position2D" parent="Node2d"]
position = Vector2( 40, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Shoot0 = SubResource( 4 )
anims/Shoot1 = SubResource( 3 )
anims/Shoot2 = SubResource( 5 )
anims/Shoot3 = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
